add nav bar and other functionality

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="wrapper">
+
+    <nav>
+        <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Store</a></li>
+        <li><a href="">Contact</a></li>
+        </ul>
+
+        <ul class="social">
+            <li><a href="" class="fb">Facebook</a></li>
+            <li><a href="" class="tw">Twitter</a></li>
+        </ul>
+    </nav>
+
+
         <div class = "flex-container">
             <div class = "box one"></div>
             <div class = "box two"></div>
