--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <nav>
         <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Store</a></li>
+        <li><a href="">About Me</a></li>
+        <li><a href="">What I Intend to Build</a></li>
+        <li><a href="">How I Intend to Get There</a></li>
         <li><a href="">Contact</a></li>
         </ul>
 
@@ -25,7 +25,25 @@
     </nav>
 
     <section class="subtitle">
-        <div>This is my First Section</div>
+        <div>About Me</div>
+    </section>
+
+    <section id="blocks">
+        <article>
+            <h2>First Article</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </article>
+
+        <div><img src="img/Alaska3.jpg" width="100%"></div>
+    </section>
+
+    <section class="subtitle">
+        <div>What I Intend to Build</div>
     </section>
 
     <section id="blocks">
@@ -59,41 +77,7 @@
     </section>
 
     <section class="subtitle">
-        <div>This is my Second Section</div>
-    </section>
-
-    <section id="blocks">
-        <article>
-            <h2>First Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </article>
-        <article>
-            <h2>Second Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </article>
-        <article>
-            <h2>Third Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </article>
-    </section>
-
-    <section class="subtitle">
-        <div>This is my Third Section</div>
+        <div>How I Intend To Get There</div>
     </section>
 
     <section id="blocks">
