--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
 
     <section id="blocks">
-        <article>
+        <article id="first">
             <h2>First Article</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -39,7 +39,7 @@
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
 
-        <div><img src="img/Alaska3.jpg" width="100%"></div>
+        <span><img src="img/Alaska3.jpg"></span>
     </section>
 
     <section class="subtitle">
@@ -113,8 +113,6 @@
 
         <div class = "flex-container">
             <div class = "box one"></div>
-            <div class = "box two"></div>
-            <div class = "box three"></div>
         </div>
     </div>
 </body>
