Complete bottom two sections

--- a/index.html
+++ b/index.html
@@ -48,31 +48,39 @@
 
     <section id="blocks">
         <article>
-            <h2>First Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2>Community Skills</h2>
+            <p>A web app that pairs people who want to learn a new skill with mentors who
+             offer their time for free - because they want to help out.
+             <br><br>A prospective teacher describes their skills and availability.
+             Students then submit applications.
+             The website is meant to connect experience with hunger for knowledge.
+             <br><br>e.g. Why not connect a retired carpenter with someone yearning to learn how to build?
+             Our communities are wonderful resources - <em>let's make use of them</em>.</p>
         </article>
         <article>
-            <h2>Second Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2>Community Bonds</h2>
+            <p>An app that connects strangers for spontaneous friendly coffee breaks. I plan to partner with local cafés
+            around London to offer users discounted prices when they treat each other to a cashless
+            coffee through the app.
+            <br><br> Imagine opening your phone and seeing a map full of dots denoting nearby app users.
+            Your map tends to display those who recently treated someone else to a coffee, in addition to app
+            friends-of-friends who happen to be nearby. Click on their name and you've invited them to a free
+            coffee two minutes away!
+            <br><br>Of course, personal profiles and messaging capabilities are built into the app.
+            Within a few weeks you find yourself with a parallel, real-life social network thanks to
+            the bonding power of the coffee bean. The point of this app is not necessarily dating, but to bring
+            together people in a community who might never intersect otherwise.
+            </p>
         </article>
         <article>
-            <h2>Third Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2>Community Transportation</h2>
+            <p>North America has high transportation costs and virtually no ride-sharing apps for inter-city travel.
+             It's a <strong>huge</strong></p> untapped field of opportunity.
+             <br><br>My app will soon allow people to advertise unused seats in their car when they travel long distances.
+             The free market will determine seat prices, but I expect them to be significantly lower than buses or trains,
+             as is the case with similar apps on the European market.
+             <br><br>I cannot wait to offer North Americans a cheaper, more environmentally-friendly and convivial way
+             to travel with others.
         </article>
     </section>
 
@@ -82,31 +90,32 @@
 
     <section id="blocks">
         <article>
-            <h2>First Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2>Phase 1. Solo</h2>
+            <p>Every journey of discovery begins alone and quickly snowballs into a group venture.
+            My coding journey started almost three months ago in Montreal with a solo decision to improve my programming
+            skills from zero to where they are now.
+            <br><br>Fast-forward and I've spent the last two months in London learning to code with
+            a wonderful community of like-minded people. It feels amazing to type this HTML right now!
+            </p>
         </article>
         <article>
-            <h2>Second Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2>Phase 2. Founders & Coders</h2>
+            <p>My next phase is joining F&C full-time with the February cohort. I've attended virtually
+            every meetup of the last two months and know and love the open, industrious, cross-disciplinary,
+            community-driven (but self-directed) atmosphere. I want to keep giving and learning here in London.
+            <br><br>My favourite moment thus far has been teaching 25 other F&C community members how to use
+            Git and GitHub. Immensely rewarding opportunity to give back to a community that has already given
+            me so much - I certainly welcome the chance to give more tutorials to the community in 2017!
+            </p>
         </article>
         <article>
-            <h2>Third Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2>Phase 3. Start-ups</h2>
+            <p>I plan to apply to London-based tech start-ups and mid-sized companies while attending F&C in Q1 2017.
+            I want the opportunity to be a big fish in a small pond: to have lots of responsibility, but access to
+            experienced coworkers to learn and grow from.
+            <br><br>While working in the start-up scene, I want to remain engaged with the rest of the tech community,
+            principally through F&C, to continue developing my own app ideas - a sampling of which are listed in the previous
+            section.</p>
         </article>
     </section>
 
