--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href='http://fonts.googleapis.com/css?family=Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="wrapper">
@@ -28,51 +28,64 @@
         <div>About Me</div>
     </section>
 
-    <section id="blocks">
-        <article id="first">
-            <h2>First Article</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </article>
+    <section class="blocks">
+        <span class="article-sizing"><article id="first">
+            <h2>Brief biography</h2>
+            <ul>
+            <li>1992. Born in California</li>
+            <li>1997. Raised along the cultural border where French- and English-Canada meet</li>
+            <li>2014. Engineering work term in Sydney, Australia</li>
+            <li>2015. Bachelor of Materials Engineering from McGill University in Montreal</li>
+            <li>2016. Move to London to learn how to code</li>
+            </ul>
+            <h2>You're most likely to find me doing one of the following things</h2>
+            <ul>
+                <li>Coding</li>
+                <li>Reading a best-seller on start-ups and/or the sharing economy</li>
+                <li>Doing market research on app ideas</li>
+                <li>Hiking</li>
+                <li>Paragliding</li>
+                <li>Playing piano in a bar</li>
+                <li>Teaching someone guitar</li>
+                <li>Wikipedia'ing the history of a regional Thai language</li>
+                <li>Studying a European language on Duolingo, LingQ or Memrise</li>
+            </ul>
+        </article></span>
 
-        <span><img src="img/Alaska3.jpg"></span>
+        <span><img class="imagefit" src="img/Alaska3.jpg" alt="Alaska"></span>
     </section>
 
     <section class="subtitle">
         <div>What I Intend to Build</div>
     </section>
 
-    <section id="blocks">
-        <article>
+    <section class="blocks">
+        <span class="article-sizing"><article>
             <h2>Community Skills</h2>
             <p>A web app that pairs people who want to learn a new skill with mentors who
              offer their time for free - because they want to help out.
              <br><br>A prospective teacher describes their skills and availability.
-             Students then submit applications.
+             Students then submit applications to work alongside them.
              The website is meant to connect experience with hunger for knowledge.
              <br><br>e.g. Why not connect a retired carpenter with someone yearning to learn how to build?
              Our communities are wonderful resources - <em>let's make use of them</em>.</p>
-        </article>
-        <article>
+        </article></span>
+        <span class="article-sizing"><article>
             <h2>Community Bonds</h2>
             <p>An app that connects strangers for spontaneous friendly coffee breaks. I plan to partner with local cafés
             around London to offer users discounted prices when they treat each other to a cashless
             coffee through the app.
             <br><br> Imagine opening your phone and seeing a map full of dots denoting nearby app users.
-            Your map tends to display those who recently treated someone else to a coffee, in addition to app
+            Your map tends to display those people who recently treated someone else to a coffee, in addition to app
             friends-of-friends who happen to be nearby. Click on their name and you've invited them to a free
-            coffee two minutes away!
+            coffee session two minutes away!
             <br><br>Of course, personal profiles and messaging capabilities are built into the app.
             Within a few weeks you find yourself with a parallel, real-life social network thanks to
             the bonding power of the coffee bean. The point of this app is not necessarily dating, but to bring
-            together people in a community who might never intersect otherwise.
+            together people in a community who might otherwise never intersect.
             </p>
-        </article>
-        <article>
+        </article></span>
+        <span class="article-sizing"><article>
             <h2>Community Transportation</h2>
             <p>North America has high transportation costs and virtually no ride-sharing apps for inter-city travel.
              It's a <strong>huge</strong></p> untapped field of opportunity.
@@ -81,15 +94,15 @@
              as is the case with similar apps on the European market.
              <br><br>I cannot wait to offer North Americans a cheaper, more environmentally-friendly and convivial way
              to travel with others.
-        </article>
+        </article></span>
     </section>
 
     <section class="subtitle">
         <div>How I Intend To Get There</div>
     </section>
 
-    <section id="blocks">
-        <article>
+    <section class="blocks">
+        <span class="article-sizing"><article>
             <h2>Phase 1. Solo</h2>
             <p>Every journey of discovery begins alone and quickly snowballs into a group venture.
             My coding journey started almost three months ago in Montreal with a solo decision to improve my programming
@@ -97,18 +110,18 @@
             <br><br>Fast-forward and I've spent the last two months in London learning to code with
             a wonderful community of like-minded people. It feels amazing to type this HTML right now!
             </p>
-        </article>
-        <article>
+        </article></span>
+        <span class="article-sizing"><article>
             <h2>Phase 2. Founders & Coders</h2>
             <p>My next phase is joining F&C full-time with the February cohort. I've attended virtually
             every meetup of the last two months and know and love the open, industrious, cross-disciplinary,
             community-driven (but self-directed) atmosphere. I want to keep giving and learning here in London.
             <br><br>My favourite moment thus far has been teaching 25 other F&C community members how to use
-            Git and GitHub. Immensely rewarding opportunity to give back to a community that has already given
-            me so much - I certainly welcome the chance to give more tutorials to the community in 2017!
+            Git and GitHub. It was an immensely rewarding opportunity to give back to a community that has already given
+            so much to me - I certainly welcome the chance to give more tutorials to the community in 2017!
             </p>
-        </article>
-        <article>
+        </article></span>
+        <span class="article-sizing"><article>
             <h2>Phase 3. Start-ups</h2>
             <p>I plan to apply to London-based tech start-ups and mid-sized companies while attending F&C in Q1 2017.
             I want the opportunity to be a big fish in a small pond: to have lots of responsibility, but access to
@@ -116,7 +129,7 @@
             <br><br>While working in the start-up scene, I want to remain engaged with the rest of the tech community,
             principally through F&C, to continue developing my own app ideas - a sampling of which are listed in the previous
             section.</p>
-        </article>
+        </article></span>
     </section>
 
 
