Complete preliminary font selection

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="http://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Rubik|Playfair+Display|Cinzel|Raleway" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
@@ -88,12 +87,12 @@
         <span class="article-sizing"><article>
             <h2>Community Transportation</h2>
             <p>North America has high transportation costs and virtually no ride-sharing apps for inter-city travel.
-             It's a <strong>huge</strong></p> untapped field of opportunity.
+             It's a <strong>huge</strong> untapped field of opportunity.
              <br><br>My app will soon allow people to advertise unused seats in their car when they travel long distances.
              The free market will determine seat prices, but I expect them to be significantly lower than buses or trains,
              as is the case with similar apps on the European market.
              <br><br>I cannot wait to offer North Americans a cheaper, more environmentally-friendly and convivial way
-             to travel with others.
+             to travel with others.</p>
         </article></span>
     </section>
 
