Add green colour to dates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Arvo|Rubik|Playfair+Display|Cinzel|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Libre+Franklin|Playfair+Display|Cinzel|Raleway" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
@@ -31,11 +31,11 @@
         <span class="article-sizing"><article id="first">
             <h2>Brief biography</h2>
             <ul>
-            <li>1992. Born in California</li>
-            <li>1997. Raised along the cultural border where French- and English-Canada meet</li>
-            <li>2014. Engineering work term in Sydney, Australia</li>
-            <li>2015. Bachelor of Materials Engineering from McGill University in Montreal</li>
-            <li>2016. Move to London to learn how to code</li>
+            <li><span class="green_bold">1992.</span> Born in California</li>
+            <li><span class="green_bold">1997.</span> Raised along the cultural border where French- and English-Canada meet</li>
+            <li><span class="green_bold">2014.</span> Engineering work term in Sydney, Australia</li>
+            <li><span class="green_bold">2015.</span> Bachelor of Materials Engineering from McGill University in Montreal</li>
+            <li><span class="green_bold">2016.</span> Move to London to learn how to code</li>
             </ul>
             <h2>You're most likely to find me doing one of the following things</h2>
             <ul>
@@ -51,7 +51,7 @@
             </ul>
         </article></span>
 
-        <span><img class="imagefit" src="img/Alaska3.jpg" alt="Alaska"></span>
+        <span style="flex: 1 1"><img src="img/Alaska3.jpg" alt="Alaska"></span>
     </section>
 
     <section class="subtitle">
