--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav>
         <ul>
         <li><a href="">About Me</a></li>
-        <li><a href="">What I Intend to Build</a></li>
-        <li><a href="">How I Intend to Get There</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="">What I Intend to Build</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="">How I Intend to Get There</a></li>
         <li><a href="">Contact</a></li>
         </ul>
 
@@ -30,19 +30,40 @@
     <section class="blocks">
         <span class="article-sizing"><article id="first">
             <h2>Brief biography</h2>
-            <ul>
-            <li><span class="green_bold">1992.</span> Born in California</li>
-            <li><span class="green_bold">1997.</span> Raised along the cultural border where French- and English-Canada meet</li>
-            <li><span class="green_bold">2014.</span> Engineering work term in Sydney, Australia</li>
-            <li><span class="green_bold">2015.</span> Bachelor of Materials Engineering from McGill University in Montreal</li>
-            <li><span class="green_bold">2016.</span> Move to London to learn how to code</li>
-            </ul>
+
+            <table>
+
+                <tr>
+                    <td><span class="green_bold">1992.</span></td>  <td style="vertical-align: bottom"><p>Born in California</p></td>
+                </tr>
+                <tr>
+                    <td><span class="green_bold">1997.</span></td>   <td><p>Raised along the cultural border where French- and English-Canada meet</p></td>
+                </tr>
+                <tr>
+                    <td><span class="green_bold">2014.</span></td><td><p>Engineering work term in Sydney, Australia</p></td>
+                </tr>
+                <tr>
+                    <td><span class="green_bold">2015.</span></td>   <td><p>Bachelor of Materials Engineering from McGill University in Montreal</p></td>
+                </tr>
+                <tr>
+                    <td><span class="green_bold">2016.</span></td>   <td style="vertical-align: bottom"><p>Move to London to learn how to code</p></td>
+                </tr>
+
+            </table>
+
+
+           <!--  <span class="green_bold">1992.</span> <p>Born in California</p>
+            <span class="green_bold">1997.</span> <p>Raised along the cultural border where French- and English-Canada meet</p>
+            <span class="green_bold">2014.</span> <p>Engineering work term in Sydney, Australia</p>
+            <span class="green_bold">2015.</span> <p>Bachelor of Materials Engineering from McGill University in Montreal</p>
+            <span class="green_bold">2016.</span> <p>Move to London to learn how to code</p> -->
+
             <h2>You're most likely to find me doing one of the following things</h2>
             <ul>
                 <li>Coding</li>
                 <li>Reading a best-seller on start-ups and/or the sharing economy</li>
                 <li>Doing market research on app ideas</li>
-                <li>Hiking</li>
+                <li>Hiking in nature</li>
                 <li>Paragliding</li>
                 <li>Playing piano in a bar</li>
                 <li>Teaching someone guitar</li>
