--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Arvo|Libre+Franklin|Playfair+Display|Cinzel|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Cabin+Sketch|Libre+Franklin|Playfair+Display|Cinzel|Raleway" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
 
     <nav>
         <ul>
-        <li><a href="">About Me</a></li>
-        <li style="padding: 0 20px 0 20px"><a href="">What I Intend to Build</a></li>
-        <li style="padding: 0 20px 0 20px"><a href="">How I Intend to Get There</a></li>
+        <li><a href="#about_me">About Me</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="#build_it">What I Intend to Build</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="#get_there">How I Intend to Get There</a></li>
         <li><a href="">Contact</a></li>
         </ul>
 
@@ -23,7 +23,7 @@
         </ul>
     </nav>
 
-    <section class="subtitle">
+    <section class="subtitle" id="about_me">
         <div>About Me</div>
     </section>
 
@@ -51,13 +51,6 @@
 
             </table>
 
-
-           <!--  <span class="green_bold">1992.</span> <p>Born in California</p>
-            <span class="green_bold">1997.</span> <p>Raised along the cultural border where French- and English-Canada meet</p>
-            <span class="green_bold">2014.</span> <p>Engineering work term in Sydney, Australia</p>
-            <span class="green_bold">2015.</span> <p>Bachelor of Materials Engineering from McGill University in Montreal</p>
-            <span class="green_bold">2016.</span> <p>Move to London to learn how to code</p> -->
-
             <h2>You're most likely to find me doing one of the following things</h2>
             <ul>
                 <li>Coding</li>
@@ -75,12 +68,13 @@
         <span style="flex: 1 1"><img src="img/Alaska3.jpg" alt="Alaska"></span>
     </section>
 
-    <section class="subtitle">
+    <section class="subtitle" id="build_it">
         <div>What I Intend to Build</div>
     </section>
 
     <section class="blocks">
         <span class="article-sizing"><article>
+            <h2 class="apptitles">App 1.</h2>
             <h2>Community Skills</h2>
             <p>A web app that pairs people who want to learn a new skill with mentors who
              offer their time for free - because they want to help out.
@@ -91,6 +85,7 @@
              Our communities are wonderful resources - <em>let's make use of them</em>.</p>
         </article></span>
         <span class="article-sizing"><article>
+            <h2 class="apptitles">App 2.</h2>
             <h2>Community Bonds</h2>
             <p>An app that connects strangers for spontaneous friendly coffee breaks. I plan to partner with local cafés
             around London to offer users discounted prices when they treat each other to a cashless
@@ -106,6 +101,7 @@
             </p>
         </article></span>
         <span class="article-sizing"><article>
+            <h2 class="apptitles">App 3.</h2>
             <h2>Community Transportation</h2>
             <p>North America has high transportation costs and virtually no ride-sharing apps for inter-city travel.
              It's a <strong>huge</strong> untapped field of opportunity.
@@ -117,7 +113,7 @@
         </article></span>
     </section>
 
-    <section class="subtitle">
+    <section class="subtitle" id="get_there">
         <div>How I Intend To Get There</div>
     </section>
 
