--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
 
         <ul class="social">
-            <li><a href="" class="fb">Facebook</a></li>
+            <li><a href="https://www.facebook.com/colinturner92" class="fb">Facebook</a></li>
             <li><a href="" class="tw">Twitter</a></li>
         </ul>
     </nav>
@@ -40,7 +40,7 @@
                     <td><span class="green_bold">1997.</span></td>   <td><p>Raised along the cultural border where French- and English-Canada meet</p></td>
                 </tr>
                 <tr>
-                    <td><span class="green_bold">2014.</span></td><td><p>Engineering work term in Sydney, Australia</p></td>
+                    <td><span class="green_bold">2014.</span></td><td style="vertical-align: middle"><p>Engineering work term in Sydney, Australia</p></td>
                 </tr>
                 <tr>
                     <td><span class="green_bold">2015.</span></td>   <td><p>Bachelor of Materials Engineering from McGill University in Montreal</p></td>
@@ -65,7 +65,7 @@
             </ul>
         </article></span>
 
-        <span style="flex: 1 1"><img src="img/Alaska3.jpg" alt="Alaska"></span>
+        <span style="align-self: center; flex: 1 1"><img src="img/Alaska3.jpg" alt="Alaska"></span>
     </section>
 
     <section class="subtitle" id="build_it">
@@ -75,7 +75,7 @@
     <section class="blocks">
         <span class="article-sizing"><article>
             <h2 class="apptitles">App 1.</h2>
-            <h2>Community Skills</h2>
+            <h2>Community Skill-building</h2>
             <p>A web app that pairs people who want to learn a new skill with mentors who
              offer their time for free - because they want to help out.
              <br><br>A prospective teacher describes their skills and availability.
