--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </ul>
 
         <ul class="social">
-            <li><a href="https://www.facebook.com/colinturner92" class="fb">Facebook</a></li>
-            <li><a href="" class="tw">Twitter</a></li>
+            <li><a href="https://www.facebook.com/colinturner92" class="facebook">Facebook</a></li>
+            <li><a href="https://twitter.com/colinturner42" class="twitter">Twitter</a></li>
         </ul>
     </nav>
 
