--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <table>
 
                 <tr>
-                    <td><span class="green_bold">1992.</span></td>  <td style="vertical-align: bottom"><p>Born in California</p></td>
+                    <td><span class="green_bold">1992.</span></td>  <td style="vertical-align: bottom"><p class="table1">Born in California</p></td>
                 </tr>
                 <tr>
-                    <td><span class="green_bold">1997.</span></td>   <td><p>Raised along the cultural border where French- and English-Canada meet</p></td>
+                    <td><span class="green_bold">1997.</span></td>   <td><p class="table2">Raised along the cultural border where French- and English-Canada meet</p></td>
                 </tr>
                 <tr>
-                    <td><span class="green_bold">2014.</span></td><td style="vertical-align: middle"><p>Engineering work term in Sydney, Australia</p></td>
+                    <td><span class="green_bold">2014.</span></td><td style="vertical-align: middle"><p class="table3">Engineering work term in Sydney, Australia</p></td>
                 </tr>
                 <tr>
-                    <td><span class="green_bold">2015.</span></td>   <td><p>Bachelor of Materials Engineering from McGill University in Montreal</p></td>
+                    <td><span class="green_bold">2015.</span></td>   <td><p class="table4">Bachelor of Materials Engineering from McGill University in Montreal</p></td>
                 </tr>
                 <tr>
-                    <td><span class="green_bold">2016.</span></td>   <td style="vertical-align: bottom"><p>Move to London to learn how to code</p></td>
+                    <td><span id="specialred">2016.</span></td>   <td style="vertical-align: bottom"><p class="table5" id="londonred">Move to London to learn how to code</p></td>
                 </tr>
 
             </table>
@@ -53,18 +53,18 @@
             <h2>You're most likely to find me doing one of the following things</h2>
             <ul>
                 <li>Coding</li>
-                <li>Reading a best-seller on start-ups and/or the sharing economy</li>
-                <li>Doing market research on app ideas</li>
+                <li>Reading about start-ups and/or the sharing economy</li>
+                <li>Completing market research on app ideas</li>
                 <li>Hiking in nature</li>
                 <li>Paragliding</li>
                 <li>Playing piano in a bar</li>
-                <li>Teaching someone guitar</li>
+                <li>Teaching guitar</li>
                 <li>Wikipedia'ing the history of a regional Thai language</li>
-                <li>Studying a European language on Duolingo, LingQ or Memrise</li>
+                <li>Studying a foreign language on Duolingo, LingQ or Memrise</li>
             </ul>
         </article></span>
 
-        <span style="align-self: center; flex: 1 1"><img src="img/Alaska5.jpg" alt="Alaska"></span>
+        <span style="align-self: center; flex: 1 1"><img src="img/Alaska5.jpg" alt="Colin in Alaska"></span>
     </section>
 
     <section class="subtitle" id="build_it">
