add bold transition to Move to London

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <td><span class="green_bold">2015.</span></td>   <td><p class="table4">Bachelor of Materials Engineering from McGill University in Montreal</p></td>
                 </tr>
                 <tr>
-                    <td><span id="specialred">2016.</span></td>   <td style="vertical-align: bottom"><p class="table5" id="londonred">Move to London to learn how to code</p></td>
+                    <td><span id="specialred">2016.</span></td>   <td style="vertical-align: bottom"><p class="table5" id="londonred">Move to London to learn programming</p></td>
                 </tr>
 
             </table>
