Add fade-in to bottom of About Me

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </table>
 
             <h2>You're most likely to find me doing one of the following things</h2>
-            <ul>
+            <ul class="secondlist">
                 <li>Coding</li>
                 <li>Reading about start-ups and/or the sharing economy</li>
                 <li>Completing market research on app ideas</li>
