Create blue bold keywords in About Me section

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
 
             <h2>You're most likely to find me doing one of the following things</h2>
             <ul class="secondlist">
-                <li>Coding</li>
-                <li>Reading about start-ups and/or the sharing economy</li>
-                <li>Completing market research on app ideas</li>
-                <li>Hiking in nature</li>
-                <li>Paragliding</li>
-                <li>Playing piano in a bar</li>
-                <li>Teaching guitar</li>
-                <li>Wikipedia'ing the history of a regional Thai language</li>
-                <li>Studying a foreign language on Duolingo, LingQ or Memrise</li>
+                <li><span class="boldBlue">Coding</span></li>
+                <li>Reading about <span class="boldBlue">start-ups</span> and/or <span class="boldBlue">the sharing economy</span></li>
+                <li>Completing <span class="boldBlue">market research</span> on app ideas</li>
+                <li>Hiking in <span class="boldBlue">nature</span></li>
+                <li><span class="boldBlue">Paragliding</span></li>
+                <li>Playing <span class="boldBlue">piano</span> in a bar</li>
+                <li>Teaching <span class="boldBlue">guitar</span></li>
+                <li><span class="boldBlue">Wikipedia</span>'ing the history of a regional Thai language</li>
+                <li>Studying a <span class="boldBlue">foreign language</span> on Duolingo, LingQ or Memrise</li>
             </ul>
         </article></span>
 
