Add timed fade-ins for rest of About Me section

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
             </table>
 
             <h2>You're most likely to find me doing one of the following things</h2>
-            <ul class="secondlist">
-                <li><span class="boldBlue">Coding</span></li>
-                <li>Reading about <span class="boldBlue">start-ups</span> and/or <span class="boldBlue">the sharing economy</span></li>
-                <li>Completing <span class="boldBlue">market research</span> on app ideas</li>
-                <li>Hiking in <span class="boldBlue">nature</span></li>
-                <li><span class="boldBlue">Paragliding</span></li>
-                <li>Playing <span class="boldBlue">piano</span> in a bar</li>
-                <li>Teaching <span class="boldBlue">guitar</span></li>
-                <li><span class="boldBlue">Wikipedia</span>'ing the history of a regional Thai language</li>
-                <li>Studying a <span class="boldBlue">foreign language</span> on Duolingo, LingQ or Memrise</li>
+            <ul>
+                <li><span class="boldBlue" id="bb1">Coding</span></li>
+                <li><span class="secondList">Reading about</span> <span class="boldBlue" id="bb2">start-ups</span> <span class="secondList">and/or</span> <span class="boldBlue" id="bb3">the sharing economy</span></li>
+                <li><span class="secondList">Completing</span> <span class="boldBlue" id="bb4">market research</span> <span class="secondList">on app ideas</span></li>
+                <li><span class="secondList">Hiking in</span> <span class="boldBlue" id="bb5">nature</span></li>
+                <li><span class="boldBlue" id="bb6">Paragliding</span></li>
+                <li><span class="secondList">Playing</span> <span class="boldBlue" id="bb7">piano</span> <span class="secondList">in a bar</span></li>
+                <li><span class="secondList">Teaching</span> <span class="boldBlue" id="bb8">guitar</span></li>
+                <li><span class="secondList">Wikipedia'ing the</span> <span class="boldBlue" id="bb9">history</span> <span class="secondList">of a regional Thai language</span></li>
+                <li><span class="secondList">Studying a</span> <span class="boldBlue" id="bb10">foreign language</span> <span class="secondList">on Duolingo, LingQ or Memrise</span></li>
             </ul>
         </article></span>
 
