Experiment with em vs px font size

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="blocks">
         <span class="article-sizing"><article id="first">
-            <h2>Brief biography</h2>
+            <h2 class="about_me_header">Brief biography</h2>
 
             <table>
 
@@ -51,7 +51,7 @@
             </table>
             <br><br>
 
-            <h2>You're most likely to find me doing one of the following things</h2>
+            <h2 class="about_me_header">You're most likely to find me doing one of the following things</h2>
             <ul>
                 <li><span class="boldBlue" id="bb1">Coding</span></li>
                 <li><span class="secondList">Reading about</span> <span class="boldBlue" id="bb2">start-ups</span> <span class="secondList">and/or</span> <span class="boldBlue" id="bb3">the sharing economy</span></li>
