--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         <span class="article-sizing"><article>
             <h2>Phase 1. Solo</h2>
             <p>Every journey of discovery begins alone and quickly snowballs into a group venture.
-            My coding journey started almost three months ago in Montreal with a solo decision to improve my programming
+            <strong style= "color:blue">My coding journey started almost three months ago in Montreal</strong> with a solo decision to improve my programming
             skills from zero to where they are now.
-            <br><br>Fast-forward and I've spent the last two months in London learning to code with
+            <br><br>Fast-forward to now and <strong style="color:blue">I've spent the last two months in London learning to code</strong> with
             a wonderful community of like-minded people. It feels amazing to type this HTML right now!
             </p>
         </article></span>
@@ -131,18 +131,18 @@
             <h2>Phase 2. Founders & Coders</h2>
             <p>My next phase is joining F&C full-time with the February cohort. I've attended virtually
             every meetup of the last two months and know and love the open, industrious, cross-disciplinary,
-            community-driven (but self-directed) atmosphere. I want to keep giving and learning here in London.
-            <br><br>My favourite moment thus far has been teaching 25 other F&C community members how to use
-            Git and GitHub. It was an immensely rewarding opportunity to give back to a community that has already given
+            community-driven (but self-directed) atmosphere. <strong style= "color:blue">I want to keep giving and learning here in London</strong>.
+            <br><br>My favourite moment thus far has been <strong style= "color:blue">teaching</strong> 25 other F&C community members <strong style= "color:blue">how to use
+            Git and GitHub</strong>. It was an immensely rewarding opportunity to give back to a community that has already given
             so much to me - I certainly welcome the chance to give more tutorials to the community in 2017!
             </p>
         </article></span>
         <span class="article-sizing"><article>
             <h2>Phase 3. Start-ups</h2>
-            <p>I plan to apply to London-based tech start-ups and mid-sized companies while attending F&C in Q1 2017.
+            <p>I plan to apply to <strong style= "color:blue">London-based tech start-ups and mid-sized companies</strong> while attending F&C in Q1 2017.
             I want the opportunity to be a big fish in a small pond: to have lots of responsibility, but access to
             experienced coworkers to learn and grow from.
-            <br><br>While working in the start-up scene, I want to remain engaged with the rest of the tech community,
+            <br><br>While working in the start-up scene, I want to <strong style= "color:blue">remain engaged with the rest of the tech community</strong>,
             principally through F&C, to continue developing my own app ideas - a sampling of which are listed in the previous
             section.</p>
         </article></span>
