Change highlights to class from style

--- a/index.html
+++ b/index.html
@@ -94,10 +94,7 @@
             Your map tends to display those people who recently treated someone else to a coffee, in addition to app
             friends-of-friends who happen to be nearby. Click on their name and you've invited them to a free
             coffee session two minutes away!
-            <br><br>Of course, personal profiles and messaging capabilities are built into the app.
-            Within a few weeks you find yourself with a parallel, real-life social network thanks to
-            the bonding power of the coffee bean. The point of this app is not necessarily dating, but to bring
-            together people in a community who might otherwise never intersect.
+            <br><br> Let's use the bonding power of the coffee bean to bring together elements of a community that might otherwise never intersect.
             </p>
         </article></span>
         <span class="article-sizing"><article>
@@ -121,9 +118,9 @@
         <span class="article-sizing"><article>
             <h2>Phase 1. Solo</h2>
             <p>Every journey of discovery begins alone and quickly snowballs into a group venture.
-            <strong style= "color:blue">My coding journey started almost three months ago in Montreal</strong> with a solo decision to improve my programming
+            <span class="imptext">My coding journey started almost three months ago in Montreal</span> with a solo decision to improve my programming
             skills from zero to where they are now.
-            <br><br>Fast-forward to now and <strong style="color:blue">I've spent the last two months in London learning to code</strong> with
+            <br><br>Fast-forward to now and <span class="imptext">I've spent the last two months in London learning to code</span> with
             a wonderful community of like-minded people. It feels amazing to type this HTML right now!
             </p>
         </article></span>
@@ -131,18 +128,18 @@
             <h2>Phase 2. Founders & Coders</h2>
             <p>My next phase is joining F&C full-time with the February cohort. I've attended virtually
             every meetup of the last two months and know and love the open, industrious, cross-disciplinary,
-            community-driven (but self-directed) atmosphere. <strong style= "color:blue">I want to keep giving and learning here in London</strong>.
-            <br><br>My favourite moment thus far has been <strong style= "color:blue">teaching</strong> 25 other F&C community members <strong style= "color:blue">how to use
-            Git and GitHub</strong>. It was an immensely rewarding opportunity to give back to a community that has already given
+            community-driven (but self-directed) atmosphere. <span class="imptext">I want to keep giving and learning here in London</span>.
+            <br><br>My favourite moment thus far has been <span class="imptext">teaching</span> 25 other F&C community members <span class="imptext">how to use
+            Git and GitHub</span>. It was an immensely rewarding opportunity to give back to a community that has already given
             so much to me - I certainly welcome the chance to give more tutorials to the community in 2017!
             </p>
         </article></span>
         <span class="article-sizing"><article>
             <h2>Phase 3. Start-ups</h2>
-            <p>I plan to apply to <strong style= "color:blue">London-based tech start-ups and mid-sized companies</strong> while attending F&C in Q1 2017.
+            <p>I plan to apply to <span class="imptext">London-based tech start-ups and mid-sized companies</span> while attending F&C in Q1 2017.
             I want the opportunity to be a big fish in a small pond: to have lots of responsibility, but access to
             experienced coworkers to learn and grow from.
-            <br><br>While working in the start-up scene, I want to <strong style= "color:blue">remain engaged with the rest of the tech community</strong>,
+            <br><br>While working in the start-up scene, I want to <span class="imptext">remain engaged with the rest of the tech community</span>,
             principally through F&C, to continue developing my own app ideas - a sampling of which are listed in the previous
             section.</p>
         </article></span>
