--- a/index.html
+++ b/index.html
@@ -76,33 +76,33 @@
         <span class="article-sizing"><article>
             <h2 class="apptitles">App 1.</h2>
             <h2>Community Skill-building</h2>
-            <p>A web app that pairs people who want to learn a new skill with mentors who
+            <p><span class="imptext">A web app that pairs people who want to learn a new skill with mentors</span> who
              offer their time for free - because they want to help out.
              <br><br>A prospective teacher describes their skills and availability.
              Students then submit applications to work alongside them.
-             The website is meant to connect experience with hunger for knowledge.
+             The website is meant to <span class="imptext">connect experience with hunger for knowledge</span>.
              <br><br>e.g. Why not connect a retired carpenter with someone yearning to learn how to build?
-             Our communities are wonderful resources - <em>let's make use of them</em>.</p>
+             <span class="imptext">Our communities are wonderful resources - <em>let's make use of them</em></span>.</p>
         </article></span>
         <span class="article-sizing"><article>
             <h2 class="apptitles">App 2.</h2>
             <h2>Community Bonds</h2>
-            <p>An app that connects strangers for spontaneous friendly coffee breaks. I plan to partner with local cafés
-            around London to offer users discounted prices when they treat each other to a cashless
-            coffee through the app.
+            <p>An app that connects strangers for spontaneous friendly coffee breaks. I plan to <span class="imptext">partner with local cafés
+            around London</span> to offer users discounted prices when they <span class="imptext">treat each other to a cashless
+            coffee</span> through the app.
             <br><br> Imagine opening your phone and seeing a map full of dots denoting nearby app users.
             Your map tends to display those people who recently treated someone else to a coffee, in addition to app
             friends-of-friends who happen to be nearby. Click on their name and you've invited them to a free
             coffee session two minutes away!
-            <br><br> Let's use the bonding power of the coffee bean to bring together elements of a community that might otherwise never intersect.
+            <br><br> Let's use the bonding power of the coffee bean to <span class="imptext">bring together elements of a community that might otherwise never intersect</span>.
             </p>
         </article></span>
         <span class="article-sizing"><article>
             <h2 class="apptitles">App 3.</h2>
             <h2>Community Transportation</h2>
-            <p>North America has high transportation costs and virtually no ride-sharing apps for inter-city travel.
-             It's a <strong>huge</strong> untapped field of opportunity.
-             <br><br>My app will soon allow people to advertise unused seats in their car when they travel long distances.
+            <p>North America has <span class="imptext">high transportation costs</span> and virtually no mainstream ride-sharing apps for inter-city travel.
+             It's a huge untapped field of opportunity.
+             <br><br>My app will soon <span class="imptext">allow people to advertise unused seats in their car</span> when they travel long distances.
              The free market will determine seat prices, but I expect them to be significantly lower than buses or trains,
              as is the case with similar apps on the European market.
              <br><br>I cannot wait to offer North Americans a cheaper, more environmentally-friendly and convivial way
@@ -129,7 +129,7 @@
             <p>My next phase is joining F&C full-time with the February cohort. I've attended virtually
             every meetup of the last two months and know and love the open, industrious, cross-disciplinary,
             community-driven (but self-directed) atmosphere. <span class="imptext">I want to keep giving and learning here in London</span>.
-            <br><br>My favourite moment thus far has been <span class="imptext">teaching</span> 25 other F&C community members <span class="imptext">how to use
+            <br><br>My favourite moment thus far has been <span class="imptext">teaching 25 other F&C community members how to use
             Git and GitHub</span>. It was an immensely rewarding opportunity to give back to a community that has already given
             so much to me - I certainly welcome the chance to give more tutorials to the community in 2017!
             </p>
