Add keyframes for background animation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <nav>
         <ul>
         <li><a href="#about_me">About Me</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="#community">How I Intend To Help My Community</a></li>
         <li style="padding: 0 20px 0 20px"><a href="#build_it">What I Intend to Build</a></li>
         <li style="padding: 0 20px 0 20px"><a href="#get_there">How I Intend to Get There</a></li>
         </ul>
@@ -66,6 +67,21 @@
         </article></span>
 
         <span style="align-self: center; flex: 1 1"><img src="img/Alaska5.jpg" alt="Colin in Alaska"></span>
+    </section>
+
+    <section class="subtitle" id="community">
+        <div>How I Intend To Help My Community</div>
+    </section>
+
+    <section class="blocks">
+        <span class="article-sizing"><article>
+        </article></span>
+
+        <span class="article-sizing"><article>
+        </article></span>
+
+        <span class="article-sizing"><article>
+        </article></span>
     </section>
 
     <section class="subtitle" id="build_it">
