Guest Lectures at F&C

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <nav>
         <ul>
-        <li><a href="#about_me">About Me</a></li>
-        <li style="padding: 0 20px 0 20px"><a href="#community">How I Intend To Help My Community</a></li>
-        <li style="padding: 0 20px 0 20px"><a href="#build_it">What I Intend to Build</a></li>
-        <li style="padding: 0 20px 0 20px"><a href="#get_there">How I Intend to Get There</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="#about_me">About Me</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="#community">Helping My Community</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="#build_it">Goals</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="#get_there">Plan</a></li>
         </ul>
 
         <ul class="social">
@@ -70,22 +70,33 @@
     </section>
 
     <section class="subtitle" id="community">
-        <div>How I Intend To Help My Community</div>
+        <div>Helping My Community</div>
     </section>
 
     <section class="blocks">
         <span class="article-sizing"><article>
+            <h2>Guest Lectures at F&C</h2>
+            <p>Aside from hosting Monday evenings at 14 Palmers Road, I’d also like to host the space for 60-90 minutes on
+            Wednesday evenings for guest speakers to come in.
+            <br><br>
+            These tutorials will be a chance for anyone in London to receive focused instruction about the week’s
+            featured subject. Example tutorial titles might include: “Recursion in JavaScript”, “Designing Responsive Page Layouts”, “Setting up your Coding Environment
+            to Maximise Productivity” and “Animation with CSS”.
+            <br><br>
+            I hope to make Wednesdays into something very meaningful for our local community.</p>
         </article></span>
 
         <span class="article-sizing"><article>
+            <h2>Tutoring</h2>
         </article></span>
 
         <span class="article-sizing"><article>
+            <h2>Tiny-home Shelters</h2>
         </article></span>
     </section>
 
     <section class="subtitle" id="build_it">
-        <div>What I Intend to Build</div>
+        <div>Goals</div>
     </section>
 
     <section class="blocks">
@@ -100,6 +111,7 @@
              <br><br>e.g. Why not connect a retired carpenter with someone yearning to learn how to build?
              <span class="imptext">Our communities are wonderful resources - <em>let's make use of them</em></span>.</p>
         </article></span>
+
         <span class="article-sizing"><article>
             <h2 class="apptitles">App 2.</h2>
             <h2>Community Bonds</h2>
@@ -113,6 +125,7 @@
             <br><br> Let's use the bonding power of the coffee bean to <span class="imptext">bring together elements of a community that might otherwise never intersect</span>.
             </p>
         </article></span>
+
         <span class="article-sizing"><article>
             <h2 class="apptitles">App 3.</h2>
             <h2>Community Transportation</h2>
@@ -127,7 +140,7 @@
     </section>
 
     <section class="subtitle" id="get_there">
-        <div>How I Intend To Get There</div>
+        <div>Plan</div>
     </section>
 
     <section class="blocks">
