Update background animation with red colour

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </article></span>
         <span class="article-sizing"><article>
             <h2>Phase 3. Start-ups</h2>
-            <p>I plan to apply to <span class="imptext">London-based tech start-ups and mid-sized companies</span> while attending F&C in Q1 2017.
+            <p><span class="imptext">I plan to apply to London-based tech start-ups and mid-sized companies</span> while attending F&C in Q1 2017.
             I want the opportunity to be a big fish in a small pond: to have lots of responsibility, but access to
             experienced coworkers to learn and grow from.
             <br><br>While working in the start-up scene, I want to <span class="imptext">remain engaged with the rest of the tech community</span>,
