Tutoring and Tiny Houses content

--- a/index.html
+++ b/index.html
@@ -89,23 +89,29 @@
 
         <span class="article-sizing"><article>
             <h2>Tutoring</h2>
-            <p> I have a particular passion for teaching and have already begun free tutoring sessions for
-            two kids here in London who need help with their schoolwork. I’m very skilled and experienced at teaching STEM topics,
-            and am also perfectly fluent in French and German. These are therefore the subjects that I enjoy
-            offering to those children who struggle in school and could use a helping hand. I plan on
-            continuing my tutoring well into 2017 and beyond.
+            <p> I have a particular passion for teaching and have already begun <span class="imptext">free tutoring
+            sessions</span> for two kids in London. I have years of experience <span class="imptext">working with children</span>, am deeply
+            skilled at teaching <span class="imptext">STEM topics</span>, and
+            can also easily teach <span class="imptext">English</span>, <span class="imptext">French</span>, <span class="imptext">German</span> and <span class="imptext">Spanish</span>. I plan on
+            continuing my free tutoring for those who need it well into 2017 and beyond.
             <br><br>
-            I have also spoken to other applicants about bringing outdoor-skills education to Londoners.
-            This is a very popular topic in Canada (where I’m from) and I’d like to disperse
-            outdoors-education to interested community members here in London by organising camping
-            trips. I’ve led such trips for over 6 years as I’ve worked extensively in the outdoor
-            education and summer camping industries in Canada.
+            I have also spoken to other applicants about <span class="imptext">bringing outdoor-skills education to Londoners by
+            leading weekend camping trips</span>. I’ve led such trips for over 6 years as I’ve worked extensively
+            in the outdoor education and summer camping industries in Canada.
 
             </p>
         </article></span>
 
         <span class="article-sizing"><article>
             <h2>Tiny-home Shelters</h2>
+            <p>One of my goals for 2017 is to <span class="imptext">improve my carpentry skills</span>. To that end, I'm actively looking
+            to <span class="imptext">partner with a local carpenter</span> (and possibly fellow cohort members) to <span class="imptext">build small, portable
+            shelters for London's homeless</span>.
+            <br><br>
+            These so-called "tiny houses" are immensely popular as side-projects and getaway cabin retreats
+            in Canada - I don't see any reason not to build one for somebody who could use it here!
+            I'm really looking forward to tackling this as a weekend side project and learning new skills
+            along the way.</p>
         </article></span>
     </section>
 
