Clean up font sizes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <section class="blocks">
         <span class="article-sizing"><article>
-            <h2>Guest Lectures at F&C</h2>
+            <h2>Guest Lectures at Founders&Coders</h2>
             <p>Aside from hosting Monday evenings at 14 Palmers Road, <span class="imptext">I’d also like to host the space for 60-90 minutes on
             Wednesday evenings for guest speakers to come in</span>.
             <br><br>
@@ -174,7 +174,7 @@
             </p>
         </article></span>
         <span class="article-sizing"><article>
-            <h2>Phase 2. Founders & Coders</h2>
+            <h2>Phase 2. Founders&Coders</h2>
             <p>My next phase is joining F&C full-time with the February cohort. I've attended virtually
             every meetup of the last two months and know and love the open, industrious, cross-disciplinary,
             community-driven (but self-directed) atmosphere. <span class="imptext">I want to keep giving and learning here in London</span>.
