--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=320, initial-scale=1">
-    <title>Document</title>
+    <title>Colin</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Cabin+Sketch|Libre+Franklin|Playfair+Display|Cinzel|Raleway" rel="stylesheet">
 </head>
