Change navbar titles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
         <li style="padding: 0 20px 0 20px"><a href="#about_me">About Me</a></li>
         <li style="padding: 0 20px 0 20px"><a href="#community">Helping My Community</a></li>
-        <li style="padding: 0 20px 0 20px"><a href="#build_it">Goals</a></li>
+        <li style="padding: 0 20px 0 20px"><a href="#build_it">Start-up Goals</a></li>
         <li style="padding: 0 20px 0 20px"><a href="#get_there">Plan</a></li>
         </ul>
 
@@ -117,7 +117,7 @@
     </section>
 
     <section class="subtitle" id="build_it">
-        <div>Goals</div>
+        <div>Start-up Goals</div>
     </section>
 
     <section class="blocks">
