--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <span class="article-sizing"><article>
             <h2 class="apptitles">App 3.</h2>
             <h2>Community Transportation</h2>
-            <p>North America has <span class="imptext">high transportation costs</span> and virtually no mainstream ride-sharing apps for inter-city travel.
+            <p>North America has <span class="imptext">high public transportation costs</span> and virtually no mainstream ride-sharing apps for inter-city travel.
              It's a huge untapped field of opportunity.
              <br><br>My app will soon <span class="imptext">allow people to advertise unused seats in their car</span> when they travel long distances.
              The free market will determine seat prices, but I expect them to be significantly lower than buses or trains,
