--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=320, initial-scale=1">
     <title>Colin</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Arvo|Cabin+Sketch|Libre+Franklin|Playfair+Display|Cinzel|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Roboto|Cabin+Sketch|Libre+Franklin|Playfair+Display|Cinzel|Raleway" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="./favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="./favicon/favicon-16x16.png" sizes="16x16">
