Update paragraph font size

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <table>
 
                 <tr>
-                    <td><span class="green_bold">1992.</span></td>  <td style="vertical-align: bottom"><p class="table1">Born in California</p></td>
+                    <td><span class="green_bold">1992.</span></td>  <td style="vertical-align: middle"><p class="table1">Born in California</p></td>
                 </tr>
                 <tr>
                     <td><span class="green_bold">1997.</span></td>   <td><p class="table2">Raised along the cultural border where French- and English-Canada meet</p></td>
@@ -62,15 +62,15 @@
 
             <h2 class="about_me_header">You're most likely to find me doing one of the following things</h2>
             <ul>
-                <li><span class="boldBlue" id="bb1">Coding</span></li>
-                <li><span class="secondList">Reading about</span> <span class="boldBlue" id="bb2">start-ups</span> <span class="secondList">and/or</span> <span class="boldBlue" id="bb3">the sharing economy</span></li>
-                <li><span class="secondList">Completing</span> <span class="boldBlue" id="bb4">market research</span> <span class="secondList">on app ideas</span></li>
-                <li><span class="secondList">Hiking in</span> <span class="boldBlue" id="bb5">nature</span></li>
-                <li><span class="boldBlue" id="bb6">Paragliding</span></li>
-                <li><span class="secondList">Playing</span> <span class="boldBlue" id="bb7">piano</span> <span class="secondList">in a bar</span></li>
-                <li><span class="secondList">Teaching</span> <span class="boldBlue" id="bb8">guitar</span></li>
-                <li><span class="secondList">Wikipedia'ing the</span> <span class="boldBlue" id="bb9">history</span> <span class="secondList">of a regional Thai language</span></li>
-                <li><span class="secondList">Studying a</span> <span class="boldBlue" id="bb10">foreign language</span> <span class="secondList">on Duolingo, LingQ or Memrise</span></li>
+                <li><p><span class="boldBlue" id="bb1">Coding</span></p></li>
+                <li><p><span class="secondList">Reading about</span> <span class="boldBlue" id="bb2">start-ups</span> <span class="secondList">and/or</span> <span class="boldBlue" id="bb3">the sharing economy</span></p></li>
+                <li><p><span class="secondList">Completing</span> <span class="boldBlue" id="bb4">market research</span> <span class="secondList">on app ideas</span></p></li>
+                <li><p><span class="secondList">Hiking in</span> <span class="boldBlue" id="bb5">nature</span></p></li>
+                <li><p><span class="boldBlue" id="bb6">Paragliding</span></p></li>
+                <li><p><span class="secondList">Playing</span> <span class="boldBlue" id="bb7">piano</span> <span class="secondList">in a bar</span></p></li>
+                <li><p><span class="secondList">Teaching</span> <span class="boldBlue" id="bb8">guitar</span></p></li>
+                <li><p><span class="secondList">Wikipedia'ing the</span> <span class="boldBlue" id="bb9">history</span> <span class="secondList">of a regional Thai language</span></p></li>
+                <li><p><span class="secondList">Studying a</span> <span class="boldBlue" id="bb10">foreign language</span> <span class="secondList">on Duolingo, LingQ or Memrise</span></p></li>
             </ul>
         </article></span>
 
